Update responsive layout

--- a/src/static_restaurant.html
+++ b/src/static_restaurant.html
@@ -14,7 +14,7 @@
         <nav id="nav_bar">
             <img class='nav_logo' src="./images/youkoso_logo_color.svg" alt="youkoso logo">
             <hr class="nav_divider">
-            <ul>
+            <ul class="menu_items">
                 <li><button class="nav_button">Desayunos<br> de cortesía</button></li>
                 <li><button class="nav_button">Desayunos<br> a la carta</button></li>
                 <li><button class="nav_button">Comida<br> a la carta</button></li>
@@ -89,5 +89,8 @@
     </div>
     </div>
 </body>
+<footer>
+    <p>Copyright © Youkoso Hotel <script>document.write(new Date().getFullYear())</script> </p>
+</footer>
 
 </html>
