Complete mobile version

--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,9 @@
 </head>
 <body>
     <script src="bundle.js"></script>
-        <a href="javascript:void(0);" class="mobile_hamburger_icon" onclick="hideMenu()">
+        <a href="javascript:void(0);" class="mobile_hamburger_icon">
             <i class="fa fa-bars fa-xl"></i>
         </a>
-    </nav>
     <div id="content"></div>
     <footer>
     <p>Copyright © Youkoso Hotel <script>document.write(new Date().getFullYear())</script> </p>
